# bg3connector

./: README.md  pyproject.toml
src/bg3connector/: __init__.py  api.py  cli.py  matcher.py  models.py  storage.py
